--- a/less/home-page.less
+++ b/less/home-page.less
@@ -7,8 +7,8 @@
     height: 300px;
     h1 {
         font-size: 4.3rem;
-        border-top: 3px solid @lighest-grey;
-        border-bottom: 3px solid @lighest-grey;
+        border-top: 3px solid @lightest-grey;
+        border-bottom: 3px solid @lightest-grey;
         margin-bottom: 20px;
     }
     .title-info {
@@ -17,7 +17,7 @@
     }
     .login-button {
         border-radius: 8px;
-        border: 2px solid @lighest-grey;
+        border: 2px solid @lightest-grey;
         padding-top: 5px;
         margin-bottom: 50px;
         height: 35px;
@@ -31,7 +31,6 @@
     }
     .learn-more {
         font-size: 2.5rem;
-        letter-spacing: -0.1rem;
         margin-bottom: 20px;
     }
 
